@@ -1,6 +1,7 @@
 
 .onAttach <- function(libname, pkgname) {
-    packageStartupMessage("\n\nThe 'spdl' package is not meant for interactive work following 'library(spdl)'. ",
-                          "Rather, just call it functions 'spdl::info(\"Some message\")' directly without ",
-                          "attaching the package.\n\n")
+    txt <- paste0("\nThe 'spdl' package is not meant for interactive work following 'library(spdl)'.\n",
+                  "Rather, just call its functions directly (e.g. 'spdl::info(\"Some message\")')\n",
+                  "without attaching the package.\n")
+    packageStartupMessage(txt)
 }
