@@ -1,3 +1,7 @@
+2022-12-26  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/wrap.R (stopwatch,elapsed): Wrap two stopwatch functions
+
 2022-12-14  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Release 0.0.3
